--- a/main.html
+++ b/main.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html>
-<head></head>
-<body>
-	<!-- PLease only edit this file for this asssignment. Thanks!-->
-	<h1>Hello </h1>
-</body>
+	<head></head>
+	<body>
+		<h1>Hello World</h1>
+	</body>
 </html>
